--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
       id-token: write
 
     environment:
-      name: github-pages
+      name: Preview
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
